# WQ---MP-Research

./: .gitignore  HOW_TO_RUN_SWEEP.md  Makefile  README.md  SPEC_COMPLIANCE.md  WEIGHTIZ_TECH_SPEC.md  Weightiz_Quant_MP_Research-2.fixed.ipynb  cell7_fixed_compact.py  feature_registry.yaml  launch_all_families.sh  pyproject.toml  pytest.ini  regime_detector.py  requirements.txt  risk_engine.py  run_research.py  setup.py  strategy_engine.py  sweep_runner.py  weightiz_architecture_guard.py  weightiz_feature_tensor_cache.py  weightiz_invariants.py  weightiz_module1_core.py  weightiz_module2_core.py  weightiz_module3_structure.py  weightiz_module4_strategy_funnel.py  weightiz_module5_harness.py  weightiz_module5_stats.py  weightiz_module6_dashboard.py  weightiz_module6_data.py  weightiz_module6_views.py  weightiz_profile_engine.py  weightiz_runtime_monitor.py  weightiz_self_audit.py  weightiz_shared_feature_store.py  weightiz_system_logger.py
app/: __init__.py  config_builders.py  config_models.py  data_resolution.py  runtime_support.py  stage_a_discovery.py
configs/: 100_mock.yaml  alpha_hunt_2024.yaml  cloud_discovery_20k_plan.yaml  cloud_stage_a_discovery_5000.yaml  cloud_stage_a_discovery_5000_plan.yaml  data_alpaca.yaml  data_alpaca_canary_dst.yaml  data_alpaca_canary_dst_both.yaml  data_alpaca_universe10_3y.yaml  e2e_test.yaml  local_adaptive_discovery_7core.yaml  local_adaptive_discovery_7core_2025.yaml  local_adaptive_discovery_7core_2025_plan.yaml  local_adaptive_discovery_7core_plan.yaml  local_canonical_proving.yaml  local_discovery_short_7core.yaml  local_discovery_short_7core_2025.yaml  local_proving_100_serial.yaml  local_sweep_100_m4.yaml  local_sweep_100_m4_rerun.yaml  local_trade_density_micro_7core_2025.yaml  local_trade_density_micro_7core_2025_plan.yaml  local_trade_density_micro_smoke_7core_2025.yaml  sweep_20x100.yaml  sweep_zimtra_full.yaml  sweep_zimtra_screen.yaml  template.yaml  zimtra_local_m4_benchmark.yaml  zimtra_swing_sweep.yaml
docs/: ARCHITECTURE_AUDIT_REPORT.md  AUDIT_README.md  DATA_INGESTION_ALPACA.md  FAMILY_SWEEP_AUDIT_REPORT.md  FULL_SYSTEM_RUN_REPORT.md  HOW_TO_RUN_SWEEP.md  MIGRATION_NOTES.md  OPTION_A_RESET_LOG.md  PART4_GIT_ALLOWLIST.txt  (+13 more)
(+463 files in other folders)
